# winget-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  WINGET_QUICKSTART.md  WINGET_SUBMISSION.md  memory.json  state.json  winget-tui.terminal.json
.github/: dependabot.yml
.github/aw/: actions-lock.json  repo-assist.md
.github/skills/agentic-workflows/: SKILL.md
.github/workflows/: build.yml  ci.yml  copilot-setup-steps.yml  repo-assist.lock.yml  winget-submit.yml
manifests/: README.md
manifests/example/: Shanselman.WingetTUI.installer.yaml  Shanselman.WingetTUI.locale.en-US.yaml  Shanselman.WingetTUI.yaml
src/: app.rs  backend.rs  cli_backend.rs  config.rs  handler.rs  main.rs  models.rs  theme.rs  ui.rs
tests/: parse_test.rs
