[package]
name = "winget-tui"
version = "0.1.1"
edition = "2021"
description = "A terminal user interface for Windows Package Manager (winget)"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
unicode-width = "0.2.0"
