[package]
name = "winget-tui"
version = "0.8.1"
edition = "2021"
description = "A terminal user interface for Windows Package Manager (winget)"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
unicode-width = "0.2"

[profile.release]
# Full LTO produces the smallest and fastest binary at the cost of slower link time.
lto = true
# Single codegen unit maximises cross-crate inlining opportunities.
codegen-units = 1
# Strip debug symbols from the release binary to minimise its on-disk size.
strip = "symbols"
