[package]
name = "winget-tui"
version = "0.13.0"
edition = "2021"
rust-version = "1.86"
description = "A terminal user interface for Windows Package Manager (winget)"
homepage = "https://github.com/shanselman/winget-tui"
repository = "https://github.com/shanselman/winget-tui"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
unicode-width = "0.2"

[profile.dev.package."*"]
# Compile dependencies at opt-level 1 in debug builds.
# This keeps incremental rebuilds of the main crate fast (unoptimised),
# while reducing the compilation time and binary size overhead from
# unoptimised transitive dependencies (ratatui, crossterm, tokio, etc.).
opt-level = 1

[profile.release]
# Full LTO produces the smallest and fastest binary at the cost of slower link time.
lto = true
# Single codegen unit maximises cross-crate inlining opportunities.
codegen-units = 1
# Strip debug symbols from the release binary to minimise its on-disk size.
strip = "symbols"
